<resources>
    <string name="app_name">Maxo Tex Mart</string>
    <string name="maxotexmart">MaxoTexMart</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="please_sign_up_to_create_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="toolbar">Toolbar</string>
    <string name="user">User</string>
    <string name="dep">DEP</string>
    <string name="machine">Machine</string>
    <string name="material">Material</string>
    <string name="quality">Quality</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">add User</string>
    <string name="address">Address</string>
    <string name="area">Area</string>
    <string name="pincode">Pin code</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="marketing_person_name">Marketing Person Name</string>
    <string name="marketing_person_phone_number">Marketing Person Phone Number</string>
    <string name="marketing_person_details">Marketing Person Details</string>
    <string name="purchase_person_name">Purchase Person Name</string>
    <string name="purchase_person_phone">Purchase Person Phone</string>
    <string name="purchase_person_details">Purchase Person Details</string>
    <string name="factory_name">Company Name</string>
    <string name="factory_phone">Company Phone</string>
    <string name="factory_details">Company Details</string>
    <string name="submit">Submit</string>
    <string name="material_name">Material Name</string>
    <string name="material_details">Material Details</string>
    <string name="machine_name">Machine Name</string>
    <string name="machine_details">Machine Details</string>
    <string name="dep_name">DEP Name</string>
    <string name="dep_email">DEP Email</string>
    <string name="dep_phone_number">DEP Phone Number</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="ok">OK</string>
    <string name="logout">Logout</string>
    <string name="materials">Select Materials</string>
    <string name="machines">Select Machines</string>
    <string name="cancel">Cancel</string>
    <string name="logout_message">Are you sure you want to Logout?</string>
    <string name="no_data_found">No Data Found</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="name_error_msg">Please enter name</string>
    <string name="email_error_msg">Please enter email</string>
    <string name="phone_error_msg">Please enter Phone Number</string>
    <string name="address_error_msg">Please enter address</string>
    <string name="password_error_msg">Please enter password</string>
    <string name="area_error_msg">Please enter area</string>
    <string name="city_error_msg">Please enter city</string>
    <string name="pincode_error_msg">Please enter pin code</string>
    <string name="gst_error_msg">Please enter GST Number</string>
    <string name="product_error_msg">Please select manufacturing product</string>
    <string name="mp_phone_error_msg">Please enter marketing person number</string>
    <string name="ten_digit_number_error_msg">Please enter 10 digit mobile number</string>
    <string name="dep_data_intent_key">DEP_data</string>
    <string name="isFromEdit_intent_key">isFromEdit</string>
    <string name="isFromDEP_intent_key">isFromDEP</string>
    <string name="user_id">user_id</string>
    <string name="userData">userData</string>
    <string name="updateUserData">updateUserData</string>
    <string name="isFromLastUserEdit_intent_key">isFromLastUserEdit</string>
    <string name="dep_name_error_msg">Please enter DEP name</string>
    <string name="dep_password_error_msg">Please enter DEP password</string>
    <string name="dep_phone_error_msg">Please enter DEP Mobile Number</string>
    <string name="machine_data_intent_key">Machine_data</string>
    <string name="material_data_intent_key">Material_data</string>
    <string name="quality_data_intent_key">Quality_data</string>
    <string name="edit_machine">Edit Machine</string>
    <string name="add_machine">Add Machine</string>
    <string name="enter_machine_error_msg">Please enter machine name</string>
    <string name="enter_quality_error_msg">Please enter quality name</string>
    <string name="enter_color_error_msg">Please enter colour name</string>
    <string name="factory_address">Company Address</string>
    <string name="gstin_details">GSTIN Details</string>
    <string name="owner_name">Owner Name</string>
    <string name="whatsapp_number">WhatsApp Number</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="product_name">Product Name</string>
    <string name="quality_name">Quality Name</string>
    <string name="color_name">Color Name</string>
    <string name="product_details">Product Details</string>
    <string name="quality_details">Quality Details</string>
    <string name="add_product">Add Product</string>
    <string name="add_quality">Add Quality</string>
    <string name="add_color">Add Colour</string>
    <string name="reset">RESET</string>
    <string name="show_result">Show Result</string>
    <string name="selected_material_id">selected_material_id</string>
    <string name="quality_id">quality_id</string>
    <string name="selected_color_id">selected_color_id</string>
    <string name="title_activity_filter_new">FIlterNewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>