<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/_15sdp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/_26ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/please_sign_in_to_continue"
        android:textSize="@dimen/_14ssp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:hint="@string/phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumber_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/login"
        android:textSize="@dimen/_12ssp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/please_sign_up_to_create_account"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/sign_up"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>
</LinearLayout>