<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".userMVP.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:hint="@string/first_name">

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:hint="@string/last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastName_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:hint="@string/last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dob_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:hint="@string/confirm_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPass_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/signUpBtn_btn"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/sign_up"
        android:textSize="@dimen/_12ssp" />

</LinearLayout>